Add Bandit to Code Tests
Add Bandit to Code Tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ Issues = "https://github.com/dashasierra/dstaf/issues"
 # Code Quality Controls
 test = [
     "autopep8",
+    "bandit",
     "black",
     "pytest",
     "pylint",
