--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -14,10 +14,7 @@ jobs:
     if: >
       github.event.pull_request.merged == true &&
       github.event.pull_request.base.ref == 'master' &&
-      (
-        startsWith(github.event.pull_request.head.ref, 'Doc') ||
-        startsWith(github.event.pull_request.head.ref, 'Auto')
-      )
+      !startsWith(github.event.pull_request.head.ref, 'Auto')
     steps:
     - name: Checkout
       uses: actions/checkout@v4
