--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "Dasha Sierra Text Application Framework"
 readme = "README.md"
-requires-python = ">= 3.14t"
+requires-python = ">= 3.14"
 classifiers = [
     'Development Status :: 2 - Pre-Alpha',
     'Environment :: Console',
