--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -86,6 +86,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - uses: actions/setup-python@v6
+      with:
+        python-version: '3.14t'
 
     - name: Install Requirements
       run: |
