Doc: Upgrade requirement to 3.14t (#192)
* Upgrade requirement to 3.14t

3.14 free threading is the future

* Conform to SnakeCase

Conform to SnakeCase

* Linting for Python 3.14

Linting for Python 3.14

* Requires Python 3.14t

Requires Python 3.14t

* Typehint Fix

Tuple[ClickType, Click] not just [ClickType, Click]

Also return statement needed to be pulled back by one indentation grouping (4 spaces)

* Removed free-threading

Free-threading is required, however it appears using 3.14t is not compatible with pyproject.toml

* Fixed Python Version

Oops! Forgot to set Python version to 3.14t for Code Analysis

* Lint for Python 3.14

Also added pylint ignore for default app instance, as even though it gets assigned, it is meant to be treated as a constant.

* Add Dashabot

Unsure if a bot can be added as a codeowner

* Remove Bot

Bots can't be codeowners yet. Refer to discussion https://github.com/orgs/community/discussions/23064

* Add Versioning Check

Versioning Check is performed to make sure that user's PRs contain an appropriate version semaphore.

Separating this from code checks.

* Add LF at end of 37

--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.14t'
 
       - name: JWT Generation Requirement
         env:
@@ -83,6 +86,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - uses: actions/setup-python@v6
+      with:
+        python-version: '3.14t'
 
     - name: Install Requirements
       run: |
@@ -98,11 +104,11 @@ jobs:
 
     - name: Check Black Formatting
       run: |
-        black dstaf/*py --check -t py39
+        black dstaf/*py --check -t py314
 
     - name: Lint Scan
       run: |
-        pylint dstaf/*py --py-version "3.9"
+        pylint dstaf/*py --py-version "3.14"
 
     - name: Perform Unit Tests
       run: |
