--- a/.github/workflows/Versioning.yml
+++ b/.github/workflows/Versioning.yml
@@ -21,21 +21,21 @@ jobs:
         github.event.pull_request.merged == false &&
         github.event.pull_request.user.login != 'dashabot[bot]'
     steps:
-      name: Check Version Requirement
-      env:
-        PR_TITLE: ${{ github.event.pull_request.title }}
-        BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
-      run: |
-        if [[ ! "$PR_TITLE" =~ ^(Major|Minor|Patch|Doc) ]]; then
-          echo "::error title=Invalid PR Title::Title must start with Major, Minor, Patch, or Doc."
-          echo "  ❌ PR Title: '$PR_TITLE'"
-          echo "     Please edit the title of your Pull Request to comply with version semaphore requirements. See https://semver.org/ for definitions."
-          exit 1
-        fi
-        if [[ "$BRANCH_NAME" =~ ^gh-actions ]]; then
-          echo "::error title=Invalid Branch Name::Branches may not start with 'gh-actions'."
-          echo "  ❌️ Branch Name: '$BRANCH_NAME'"
-          echo "     Rename your branch to start with anything other than 'gh-actions'..."
-          exit 1
-        fi
-        echo "✅ PR title and branch name passed validation."
+      - name: Check Version Requirement
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+        run: |
+          if [[ ! "$PR_TITLE" =~ ^(Major|Minor|Patch|Doc) ]]; then
+            echo "::error title=Invalid PR Title::Title must start with Major, Minor, Patch, or Doc."
+            echo "  ❌ PR Title: '$PR_TITLE'"
+            echo "     Please edit the title of your Pull Request to comply with version semaphore requirements. See https://semver.org/ for definitions."
+            exit 1
+          fi
+          if [[ "$BRANCH_NAME" =~ ^gh-actions ]]; then
+            echo "::error title=Invalid Branch Name::Branches may not start with 'gh-actions'."
+            echo "  ❌️ Branch Name: '$BRANCH_NAME'"
+            echo "     Rename your branch to start with anything other than 'gh-actions'..."
+            exit 1
+          fi
+          echo "✅ PR title and branch name passed validation."
