--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -105,6 +105,7 @@ jobs:
           PR_TITLE: ${{ github.event.pull_request.title }}
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
+          python -m pip install --upgrade pip setuptools wheel
           python -m build --wheel
           gh release create "${{ steps.bump-tag.outputs.new_tag }}" \
             --repo="${{ github.repository }}" \
