--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -89,7 +89,7 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
         run: |
-          gh pr merge ${{ env.PR_NUMBER }} --squash --admin --body "Automated release ${{ env.NEW_TAG }}"
+          gh pr merge ${{ env.PR_NUMBER }} --merge --admin --body "Automated release ${{ env.NEW_TAG }}"
 
       - name: Checkout for Tag
         uses: actions/checkout@v4
