--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -107,8 +107,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel build
           python -m build --wheel
-          gh release create "DStaf ${{ steps.bump-tag.outputs.new_tag }}" \
+          gh release create "${{ steps.bump-tag.outputs.new_tag }}" \
             --repo="${{ github.repository }}" \
-            --title="${{ steps.bump-tag.outputs.new_tag }}" \
+            --title="DStaf ${{ steps.bump-tag.outputs.new_tag }}" \
             --generate-notes \
             dist/*whl
